improved exp with use operators
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/pod-security-vpol/baseline/disallow-host-path/disallow-host-path.yaml
+++ b/pod-security-vpol/baseline/disallow-host-path/disallow-host-path.yaml
@@ -27,6 +27,6 @@ spec:
         resources:   ["pods"]
   validations:
         - expression: >-
-             object.spec.?volumes.orValue([]).all(volume, size(volume) == 0 || !has(volume.hostPath))
+            object.spec.?volumes.orValue([]).all(volume, !has(volume.hostPath))
           message: >-
             HostPath volumes are forbidden. The field spec.volumes[*].hostPath must be unset
