--- a/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
@@ -34,8 +34,8 @@ spec:
       expression: "['kernel.shm_rmid_forced','net.ipv4.ip_local_port_range','net.ipv4.ip_unprivileged_port_start','net.ipv4.tcp_syncookies','net.ipv4.ping_group_range']"
   validations:
     - expression: >-
-          object.spec.?securityContext.?sysctls.orValue([]).all(sysctl, sysctl == '' ||
-          has(sysctl.name) && sysctl.name in variables.allowedSysctls)
+        object.spec.?securityContext.?sysctls.orValue([]).all(sysctl, 
+          sysctl.?name.orValue('') in variables.allowedSysctls)
       message: >-
         Setting additional sysctls above the allowed type is disallowed.
         The field spec.securityContext.sysctls must be unset or not use any other names
