--- a/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
+++ b/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
@@ -28,7 +28,10 @@ spec:
       expression: >-
         ['AUDIT_WRITE','CHOWN','DAC_OVERRIDE','FOWNER','FSETID','KILL','MKNOD','NET_BIND_SERVICE','SETFCAP','SETGID','SETPCAP','SETUID','SYS_CHROOT']
     - name: allContainers
-      expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+      expression: >-
+        (object.spec.containers + 
+        object.spec.?initContainers.orValue([]) + 
+        object.spec.?ephemeralContainers.orValue([]))
   validations:
     - expression: >-
         variables.allContainers.all(container, 
