--- a/pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
+++ b/pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
@@ -29,7 +29,11 @@ spec:
         resources:   ["pods"]
   variables:
     - name: allContainers
-      expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+      expression: >-
+        object.spec.containers + 
+          object.spec.?initContainers.orValue([]) + 
+          object.spec.?ephemeralContainers.orValue([])
+
   validations:
     - expression: >-
         variables.allContainers.all(container,
