--- a/pod-security-vpol/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security-vpol/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -28,7 +28,10 @@ spec:
         resources:   ["pods"]
   variables:
   - name: allContainers
-    expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"   
+    expression: >-
+        object.spec.containers + 
+        object.spec.?initContainers.orValue([]) + 
+        object.spec.?ephemeralContainers.orValue([])
   validations:
     - expression: "variables.allContainers.all(container, container.?securityContext.?privileged.orValue(false) == false)"
       message: "Privileged mode is disallowed. All containers must set the securityContext.privileged field to `false` or unset the field."
