--- a/pod-security-vpol/baseline/disallow-proc-mount/disallow-proc-mount.yaml
+++ b/pod-security-vpol/baseline/disallow-proc-mount/disallow-proc-mount.yaml
@@ -29,7 +29,10 @@ spec:
         resources:   ["pods"]
   variables:
       - name: allContainers
-        expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+        expression: >-
+          object.spec.containers + 
+            object.spec.?initContainers.orValue([]) + 
+            object.spec.?ephemeralContainers.orValue([])
   validations:
       - expression: "variables.allContainers.all(container, container.?securityContext.?procMount.orValue('Default') == 'Default')"
         message: "Changing the proc mount from the default is not allowed."
