--- a/pod-security-vpol/restricted/disallow-capabilities-strict/.kyverno-test/adding-capabilities-strict.yaml
+++ b/pod-security-vpol/restricted/disallow-capabilities-strict/.kyverno-test/adding-capabilities-strict.yaml
@@ -28,17 +28,17 @@ spec:
   variables:
   - name: allContainers
     expression: >-
-      (object.spec.containers + 
-      (has(object.spec.initContainers) ? object.spec.initContainers : []) + 
-      (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))
+          object.spec.containers + 
+          object.spec.?initContainers.orValue([]) + 
+          object.spec.?ephemeralContainers.orValue([])
+
 
   validations:
   - expression: >-
       variables.allContainers.all(container, 
-      !has(container.securityContext) ||
-      !has(container.securityContext.capabilities) ||
-      !has(container.securityContext.capabilities.add) ||
-      ((size(container.securityContext.capabilities.add) == 1) && 
-      (container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE')))
+        container.?securityContext.?capabilities.?add.orValue([]).size() == 0 || 
+        (container.securityContext.capabilities.add.orValue([]).size() == 1 && 
+        container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE'))
+
     message: >-
       Any capabilities added other than NET_BIND_SERVICE are disallowed.
