--- a/pod-security-vpol/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
+++ b/pod-security-vpol/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
@@ -28,26 +28,21 @@ spec:
   variables:
   - name: allContainers
     expression: >-
-      (object.spec.containers + 
-      (has(object.spec.initContainers) ? object.spec.initContainers : []) + 
-      (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))
+      object.spec.containers + 
+      (object.spec.?initContainers.orValue([])) + 
+      (object.spec.?ephemeralContainers.orValue([]))
 
   validations:
   - expression: >-
       variables.allContainers.all(container, 
-      has(container.securityContext) &&
-      has(container.securityContext.capabilities) &&
-      has(container.securityContext.capabilities.drop) &&
-      container.securityContext.capabilities.drop.exists_one(capability, capability == 'ALL'))
+      container.?securityContext.?capabilities.?drop.orValue([]).exists_one(capability, capability == 'ALL'))
     message: >-
       Containers must drop `ALL` capabilities.
 
   - expression: >-
       variables.allContainers.all(container, 
-      !has(container.securityContext) ||
-      !has(container.securityContext.capabilities) ||
-      !has(container.securityContext.capabilities.add) ||
-      ((size(container.securityContext.capabilities.add) == 1) && 
-      (container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE')))
+        container.?securityContext.?capabilities.?add.orValue([]).size() == 0 || 
+        (container.securityContext.capabilities.add.orValue([]).size() == 1 && 
+        container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE'))
     message: >-
       Any capabilities added other than NET_BIND_SERVICE are disallowed.
