--- a/pod-security-vpol/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
+++ b/pod-security-vpol/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
@@ -31,21 +31,14 @@ spec:
   variables:
   - name: allContainers
     expression: >-
-      object.spec.containers + 
-      (has(object.spec.initContainers) ? object.spec.initContainers : []) + 
-      (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
+        object.spec.containers + 
+        object.spec.?initContainers.orValue([]) + 
+        object.spec.?ephemeralContainers.orValue([])
 
   validations:
   - expression: >- 
-      (!has(object.spec.securityContext) || 
-       !has(object.spec.securityContext.seccompProfile) || 
-       !has(object.spec.securityContext.seccompProfile.type) || 
-       object.spec.securityContext.seccompProfile.type.orValue('RuntimeDefault') in ['RuntimeDefault', 'Localhost']) &&
-      variables.allContainers.all(container, 
-        !has(container.securityContext) || 
-        !has(container.securityContext.seccompProfile) || 
-        !has(container.securityContext.seccompProfile.type) || 
-        container.securityContext.seccompProfile.type.orValue('RuntimeDefault') in ['RuntimeDefault', 'Localhost'])
+      object.spec.?securityContext.?seccompProfile.?type.orValue('RuntimeDefault') in ['RuntimeDefault', 'Localhost']
+      && variables.allContainers.all(container, 
+        container.?securityContext.?seccompProfile.?type.orValue('RuntimeDefault') in ['RuntimeDefault', 'Localhost'])
     message: >-
-      Use of custom Seccomp profiles is disallowed. The field securityContext.seccompProfile.type 
-      must be set to `RuntimeDefault` or `Localhost`.
+      seccompProfile.type must be either 'RuntimeDefault' or 'Localhost'.
