made correction in resource.Get()
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
+++ b/other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
@@ -32,7 +32,7 @@ spec:
   variables:
             - name: cm
               expression: >-
-               resource.Get("v1", "configmaps", object.metadata.namespace, "clusterregistries")
+               resource.Get("v1", "configmaps", "default", "clusterregistries")
             - name: allContainers
               expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
             - name: nsregistries
