policy readiness change
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
@@ -8,8 +8,9 @@ status:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
-    - reason: Succeeded
+    # - message: 'Policy is not ready for reporting, missing permissions: get /v1,
+    #      Resource=pods/ephemeralcontainers: ; list /v1, Resource=pods/ephemeralcontainers:
+    #      ; watch /v1, Resource=pods/ephemeralcontainers: .'
+    - reason: Failed
+      status: "False"
       type: RBACPermissionsGranted
-      status: "True"
-
-
