--- a/other-vpol/restrict-secret-role-verbs/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/restrict-secret-role-verbs/.chainsaw-test/policy-ready.yaml
@@ -8,8 +8,7 @@ status:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
-    - reason: Succeeded
+    - reason: Failed
+      status: "False"
       type: RBACPermissionsGranted
-      status: "True"
-
 
