--- a/other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
+++ b/other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
@@ -4,14 +4,14 @@ metadata:
   name: advanced-restrict-image-registries
   annotations:
     policies.kyverno.io/title: Advanced Restrict Image Registries in CEL expressions
-    policies.kyverno.io/category: Other in CEL 
+    policies.kyverno.io/category: Other in Vpol
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.14.0
     policies.kyverno.io/minversion: 1.14.0
-    kyverno.io/kubernetes-version: "1.26-1.27"
+    kyverno.io/kubernetes-version: "1.30"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      In instances where a ClusterPolicy defines all the approved image registries
+      In instances where a ValidatingPolicy defines all the approved image registries
       is insufficient, more granular control may be needed to set permitted registries,
       especially in multi-tenant use cases where some registries may be based on
       the Namespace. This policy shows an advanced version of the Restrict Image Registries
