--- a/other-vpol/allowed-pod-priorities/allowed-pod-priorities.yaml
+++ b/other-vpol/allowed-pod-priorities/allowed-pod-priorities.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Allowed Pod Priorities in cel expressions
     policies.kyverno.io/category: Sample in vpol 
     policies.kyverno.io/minversion: 1.14.0
-    kyverno.io/kubernetes-version: "1.26-1.27"
+    kyverno.io/kubernetes-version: "1.30"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       A Pod PriorityClass is used to provide a guarantee on the scheduling of a Pod relative to others.
