--- a/other-vpol/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
+++ b/other-vpol/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
@@ -8,7 +8,6 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace, Pod
     policies.kyverno.io/minversion: 1.14.0
-    pod-policies.kyverno.io/autogen-controllers: none
     kyverno.io/kyverno-version: 1.14.0
     kyverno.io/kubernetes-version: "1.30"
     policies.kyverno.io/description: >-
@@ -19,6 +18,9 @@ metadata:
 spec:
   validationActions: 
     - Audit
+  generation:
+   podControllers:
+     enabled: false
   evaluation:
     background:
       enabled: true  
