changed generation field
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/other-vpol/ensure-probes-different/ensure-probes-different.yaml
+++ b/other-vpol/ensure-probes-different/ensure-probes-different.yaml
@@ -19,7 +19,7 @@ spec:
     - Audit
   generation:
    podControllers:
-     enabled: false
+     controllers: []
   evaluation:
     background:
       enabled: false
