--- a/other-vpol/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
+++ b/other-vpol/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
@@ -20,7 +20,7 @@ spec:
     - Audit
   generation:
    podControllers:
-     enabled: false
+     controllers: []
   evaluation:
     background:
       enabled: true  
