--- a/other-vpol/prevent-bare-pods/prevent-bare-pods.yaml
+++ b/other-vpol/prevent-bare-pods/prevent-bare-pods.yaml
@@ -23,8 +23,7 @@ spec:
       enabled: true
   generation:
    podControllers:
-     enabled: false
-
+     controllers: []
   matchConstraints:
     resourceRules:
     - apiGroups:   [""]
