--- a/other-vpol/restrict-annotations/restrict-annotations.yaml
+++ b/other-vpol/restrict-annotations/restrict-annotations.yaml
@@ -18,7 +18,7 @@ spec:
     - Audit
   generation:
    podControllers:
-     enabled: false
+     controllers: []
   evaluation:
     background:
       enabled: true
