--- a/other-vpol/ensure-probes-different/ensure-probes-different.yaml
+++ b/other-vpol/ensure-probes-different/ensure-probes-different.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   validationActions: 
     - Audit
-  generation:
+  autogen:
    podControllers:
      controllers: []
   evaluation:
