--- a/other-vpol/prevent-bare-pods/prevent-bare-pods.yaml
+++ b/other-vpol/prevent-bare-pods/prevent-bare-pods.yaml
@@ -21,7 +21,7 @@ spec:
   evaluation:
     background:
       enabled: true
-  generation:
+  autogen:
    podControllers:
      controllers: []
   matchConstraints:
