--- a/other-vpol/restrict-annotations/restrict-annotations.yaml
+++ b/other-vpol/restrict-annotations/restrict-annotations.yaml
@@ -16,7 +16,7 @@ metadata:
 spec:
   validationActions: 
     - Audit
-  generation:
+  autogen:
    podControllers:
      controllers: []
   evaluation:
