--- a/other-vpol/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
+++ b/other-vpol/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   validationActions: 
     - Audit
-  generation:
+  autogen:
    podControllers:
      controllers: []
   evaluation:
