--- a/aws/require-encryption-aws-loadbalancers/require-encryption-aws-loadbalancers.yaml
+++ b/aws/require-encryption-aws-loadbalancers/require-encryption-aws-loadbalancers.yaml
@@ -16,7 +16,6 @@ metadata:
       that Services of type LoadBalancer contain the annotation
       service.beta.kubernetes.io/aws-load-balancer-ssl-cert with some value.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: aws-loadbalancer-has-ssl-cert
@@ -26,6 +25,7 @@ spec:
           kinds:
           - Service
     validate:
+      failureAction: Audit
       message: "Service of type LoadBalancer must carry the annotation service.beta.kubernetes.io/aws-load-balancer-ssl-cert."
       pattern:
         metadata:
