--- a/best-practices-cel/disallow-latest-tag/disallow-latest-tag.yaml
+++ b/best-practices-cel/disallow-latest-tag/disallow-latest-tag.yaml
@@ -15,7 +15,6 @@ metadata:
       a specific version of an application Pod. This policy validates that the image
       specifies a tag and that it is not called `latest`.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: require-and-validate-image-tag
@@ -28,6 +27,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "object.spec.containers.all(container, container.image.contains(':'))"
