--- a/best-practices-cel/require-drop-all/require-drop-all.yaml
+++ b/best-practices-cel/require-drop-all/require-drop-all.yaml
@@ -16,7 +16,6 @@ metadata:
       ability. Note that this policy also illustrates how to cover drop entries in any
       case although this may not strictly conform to the Pod Security Standards.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
     - name: require-drop-all
@@ -29,6 +28,7 @@ spec:
             - CREATE
             - UPDATE
       validate:
+        failureAction: Audit
         cel:
           variables:
             - name: allContainers
