--- a/best-practices-cel/require-pod-requests-limits/require-pod-requests-limits.yaml
+++ b/best-practices-cel/require-pod-requests-limits/require-pod-requests-limits.yaml
@@ -17,7 +17,6 @@ metadata:
       This policy validates that all containers have something specified for memory and CPU
       requests and memory limits.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-resources
@@ -30,6 +29,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: >-
