--- a/best-practices-cel/restrict-service-external-ips/restrict-service-external-ips.yaml
+++ b/best-practices-cel/restrict-service-external-ips/restrict-service-external-ips.yaml
@@ -15,7 +15,6 @@ metadata:
       See: https://github.com/kyverno/kyverno/issues/1367. This policy validates
       that the `externalIPs` field is not set on a Service.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: check-ips
@@ -28,6 +27,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "!has(object.spec.externalIPs)"
