--- a/best-practices/disallow-default-namespace/disallow-default-namespace.yaml
+++ b/best-practices/disallow-default-namespace/disallow-default-namespace.yaml
@@ -18,7 +18,6 @@ metadata:
       due to Pod controllers need to specify the `namespace` field under the top-level `metadata`
       object and not at the Pod template level.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-namespace
@@ -28,6 +27,7 @@ spec:
           kinds:
           - Pod
     validate:
+      failureAction: Audit
       message: "Using 'default' namespace is not allowed."
       pattern:
         metadata:
@@ -42,6 +42,7 @@ spec:
           - Job
           - StatefulSet
     validate:
+      failureAction: Audit
       message: "Using 'default' namespace is not allowed for pod controllers."
       pattern:
         metadata:
