--- a/best-practices/require-labels/require-labels.yaml
+++ b/best-practices/require-labels/require-labels.yaml
@@ -14,7 +14,6 @@ metadata:
       all tools can understand. The recommended labels describe applications in a way that can be
       queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: check-for-labels
@@ -24,6 +23,7 @@ spec:
           kinds:
           - Pod
     validate:
+      failureAction: Audit
       message: "The label `app.kubernetes.io/name` is required."
       pattern:
         metadata:
