--- a/best-practices/require-ro-rootfs/require-ro-rootfs.yaml
+++ b/best-practices/require-ro-rootfs/require-ro-rootfs.yaml
@@ -15,7 +15,6 @@ metadata:
       host system. This policy validates that containers define a securityContext
       with `readOnlyRootFilesystem: true`.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-readOnlyRootFilesystem
@@ -25,6 +24,7 @@ spec:
           kinds:
           - Pod
     validate:
+      failureAction: Audit
       message: "Root filesystem must be read-only."
       pattern:
         spec:
