--- a/argo-cel/application-prevent-default-project/application-prevent-default-project.yaml
+++ b/argo-cel/application-prevent-default-project/application-prevent-default-project.yaml
@@ -13,7 +13,6 @@ metadata:
     policies.kyverno.io/description: >-
       This policy prevents the use of the default project in an Application.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
     - name: default-project
@@ -26,6 +25,7 @@ spec:
             - CREATE
             - UPDATE
       validate:
+        failureAction: Audit
         cel:
           expressions:
             - expression: "object.spec.?project.orValue('') != 'default'"
