--- a/argo-cel/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
+++ b/argo-cel/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
@@ -17,7 +17,6 @@ metadata:
       enforce that all AppProjects specify clusterResourceBlacklist and that their group
       and kind have wildcards as values.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
     - name: has-wildcard-and-validate-clusterresourceblacklist
@@ -30,6 +29,7 @@ spec:
             - CREATE
             - UPDATE
       validate:
+        failureAction: Audit
         cel:
           expressions:
             - expression: "has(object.spec.clusterResourceBlacklist)"
