--- a/best-practices-cel/check-deprecated-apis/check-deprecated-apis.yaml
+++ b/best-practices-cel/check-deprecated-apis/check-deprecated-apis.yaml
@@ -16,7 +16,6 @@ metadata:
       ConfigMap to remove filters. PodSecurityPolicy is removed in v1.25
       so therefore the validate-v1-25-removals rule may not completely work on 1.25+.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-v1-25-removals
@@ -35,6 +34,7 @@ spec:
       - name: "allowed-api-versions"
         expression: "object.apiVersion in ['batch/v1beta1', 'discovery.k8s.io/v1beta1', 'events.k8s.io/v1beta1', 'policy/v1beta1', 'node.k8s.io/v1beta1']"
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "false"
@@ -53,6 +53,7 @@ spec:
       - name: "allowed-api-versions"
         expression: "object.apiVersion in ['flowcontrol.apiserver.k8s.io/v1beta1', 'autoscaling/v2beta2']"
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "false"
@@ -69,6 +70,7 @@ spec:
       - name: "allowed-api-versions"
         expression: "object.apiVersion in ['storage.k8s.io/v1beta1']"
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "false"
@@ -86,6 +88,7 @@ spec:
       - name: "object.apiVersion"
         expression: "object.apiVersion in ['flowcontrol.apiserver.k8s.io/v1beta2']"
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "false"
