--- a/best-practices-cel/disallow-default-namespace/disallow-default-namespace.yaml
+++ b/best-practices-cel/disallow-default-namespace/disallow-default-namespace.yaml
@@ -19,7 +19,6 @@ metadata:
       due to Pod controllers need to specify the `namespace` field under the top-level `metadata`
       object and not at the Pod template level.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-namespace
@@ -32,6 +31,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "namespaceObject.metadata.name != 'default'"
@@ -49,6 +49,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "namespaceObject.metadata.name != 'default'"
