--- a/best-practices-cel/require-labels/require-labels.yaml
+++ b/best-practices-cel/require-labels/require-labels.yaml
@@ -15,7 +15,6 @@ metadata:
       all tools can understand. The recommended labels describe applications in a way that can be
       queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: check-for-labels
@@ -28,6 +27,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: >-
