--- a/best-practices-cel/require-probes/require-probes.yaml
+++ b/best-practices-cel/require-probes/require-probes.yaml
@@ -19,7 +19,6 @@ metadata:
       This policy validates that all containers have one of livenessProbe, readinessProbe,
       or startupProbe defined.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-probes
@@ -32,6 +31,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: >-
