--- a/best-practices-cel/restrict-image-registries/restrict-image-registries.yaml
+++ b/best-practices-cel/restrict-image-registries/restrict-image-registries.yaml
@@ -16,7 +16,6 @@ metadata:
       policy validates that container images only originate from the registry `eu.foo.io` or
       `bar.io`. Use of this policy requires customization to define your allowable registries.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-registries
@@ -29,6 +28,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         variables:
           - name: allContainers
