--- a/best-practices-cel/restrict-node-port/restrict-node-port.yaml
+++ b/best-practices-cel/restrict-node-port/restrict-node-port.yaml
@@ -16,7 +16,6 @@ metadata:
       with additional upstream security checks. This policy validates that any new Services
       do not use the `NodePort` type.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-nodeport
@@ -29,6 +28,7 @@ spec:
           - CREATE
           - UPDATE
     validate:
+      failureAction: Audit
       cel:
         expressions:
           - expression: "has(object.spec.type) ? (object.spec.type != 'NodePort') : true"
