--- a/best-practices/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
+++ b/best-practices/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
@@ -13,7 +13,6 @@ metadata:
       in order to be valid. This policy ensures that there is a
       hostname for each rule defined.
 spec:
-  validationFailureAction: Audit
   background: false
   rules:
     - name: disallow-empty-ingress-host
@@ -23,6 +22,7 @@ spec:
             kinds:
               - Ingress
       validate:
+        failureAction: Audit
         message: "The Ingress host name must be defined, not empty."
         deny:
           conditions:
