--- a/best-practices/restrict-image-registries/restrict-image-registries.yaml
+++ b/best-practices/restrict-image-registries/restrict-image-registries.yaml
@@ -16,7 +16,6 @@ metadata:
       policy validates that container images only originate from the registry `eu.foo.io` or
       `bar.io`. Use of this policy requires customization to define your allowable registries.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-registries
@@ -26,6 +25,7 @@ spec:
           kinds:
           - Pod
     validate:
+      failureAction: Audit
       message: "Unknown image registry."
       pattern:
         spec:
