--- a/best-practices/restrict-node-port/restrict-node-port.yaml
+++ b/best-practices/restrict-node-port/restrict-node-port.yaml
@@ -15,7 +15,6 @@ metadata:
       with additional upstream security checks. This policy validates that any new Services
       do not use the `NodePort` type.
 spec:
-  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-nodeport
@@ -25,6 +24,7 @@ spec:
           kinds:
           - Service
     validate:
+      failureAction: Audit
       message: "Services of type NodePort are not allowed."
       pattern:
         spec:
